2007-10-12  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* child.c, pool.h, pool_config.l, pool_config.c
	  pool_process_query.c: Add new directive
	  "authentication_timeout". The directive means the maximum time
	  in seconds to complete client authentication. The default value
	  is 60.

2007-10-11  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* child.c, pool.h: Check startup packet length. If the length is
	  greater than 10,000 byte, pgpool reject the connection.

2007-09-26  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: SET statements are replicated in
	  master/slave mode.

2007-09-14  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* child.c, pool.h, pool_process_query.c: pool_process_query.c: Fix
	  hang up when load balancing node was down. If load balancing
	  node was down, select other node.

2007-08-29  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Parse message including
	  INSERT/UPDATE/DELETE query acquires RowExclusiveLock. However
	  pgpool did not wait a response from each node. It was possible
	  to occur deadlock problem.

	  Fix memory leak in reset_prepared_list.

2007-07-26  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* child.c, pool.h, pool_connection_pool.c: SIGALRM handler didn't
	  safe. Because it called non-reentrant functions. We only set a
	  flag in SIGALRM handler. Then we close expired connections in
	  safe places.

2007-07-26  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_connection_pool.c: Fix memory leak when connection slot is
	  full.

2007-07-24  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool.h, pool_process_query.c: Detect deadlock in
	  do_command(). When insert_lock was true, kind mismatch error
	  occured.

2007-07-24  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* child.c, pool_type.h, pool_process_query.c: pgpool chooses it
	  after receiving AuthenticationOK('R') message. So pgpool load
	  balance to the same node inside a same session.

2007-07-23  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>